[package]
name = "rrules"
version = "0.1.0"
edition = "2021"
description = "A library for working with recurrence rules"
license = "MIT"
license-file = "LICENSE"
authors = ["Thiago Pacheco"]
repository = "https://github.com/pachecoio/rrules"
keywords = ["recurrence", "rrule", "recurrence-rule"]
categories = ["parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
